# doublepulsar-rs

./: .gitignore  LICENSE  README.md  doublepulsar.yar
crates/: .gitignore  Cargo.toml  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: api.rs  lib.rs  log.rs  util.rs  windows.rs
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/hypnus/: Cargo.toml
crates/hypnus/src/: common.rs  ekko.rs  foliage.rs  lib.rs  xor.rs  zilean.rs
crates/ntdef/: Cargo.toml
crates/ntdef/src/: lib.rs  windows.rs
crates/uwd/: Cargo.toml  build.rs
crates/uwd/asm/x64/spoof/gnu/: synthetic.asm
crates/uwd/asm/x64/spoof/msvc/: synthetic.asm
crates/uwd/src/: lib.rs  stack.rs  syscall.rs  types.rs
udrl/: Cargo.toml  Makefile.toml  build.rs  rust-toolchain.toml
udrl/.cargo/: config.toml  config.toml.windows
udrl/asm/x64/: misc.asm  start.asm
udrl/asm/x86/: misc.asm  start.asm
udrl/scripts/: linker.ld
udrl/src/: ace.rs  crypto.rs  hooks.rs  lib.rs  loader.rs
